Dodana odpowiednia favicona

--- a/GraZaDuzoZaMalo/WindowsFormsApp1/GraGUI.csproj
+++ b/GraZaDuzoZaMalo/WindowsFormsApp1/GraGUI.csproj
@@ -88,5 +88,8 @@
       <Name>ModelGry</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Icon.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
