Dodane Menu, dodany odnośnik Autorzy, poprawione działania przycisków po zakończeniu gry

--- a/GraZaDuzoZaMalo/WindowsFormsApp1/GraGUI.csproj
+++ b/GraZaDuzoZaMalo/WindowsFormsApp1/GraGUI.csproj
@@ -47,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Menu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Menu.Designer.cs">
+      <DependentUpon>Menu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Sakovsky.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -55,6 +61,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Menu.resx">
+      <DependentUpon>Menu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Sakovsky.resx">
       <DependentUpon>Sakovsky.cs</DependentUpon>
     </EmbeddedResource>
